--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,45 @@
 .idea/
 TestNGPra.iml
+# Backend ignores
+jmeter/jmeter.log
+hotspot.log
+*.iml
+*.ipr
+*.log
+*.iws
+*.class
+target/
+classes/
+/var
+pom.xml.versionsBackup
+test-output/
+/atlassian-ide-plugin.xml
+.gcloud
+.idea
+.DS_Store
+.classpath
+.settings
+.project
+.sonar
+temp-testng-customsuite.xml
+test-output
+.externalToolBuilders
+*~
+# Front-end ignores
+bower_components/
+node_modules/
+.sass-cache/
+public/libs
+public/dist
+public/jsdoc
+public/src/libs/
+public/src/js/templates/
+public/test/unit/reports
+public/test/unit/coverage/
+*.sublime-*
+public/src/js/services/templates.js
+.tern-project
+*.orig
+public/jsdoc/
+public/test/unit/reports
+public/src/js/tour.js
